--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/vueblog2?useUnicode=true&amp;characterEncoding=utf-8&amp;useSSL=false
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/vueblog2?characterEncoding=utf-8
+#spring.datasource.url=jdbc:mysql://47.106.240.104:3306/vueblog2?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://localhost:3306/vueblog2?characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=123456
 mybatis.config-location=classpath:/mybatis-config.xml
-server.port=8084
+server.port=8081
 logging.level.org.springframework.security=info
